--- a/app/src/Passingwind.WorkflowApp.DbMigrator/Passingwind.WorkflowApp.DbMigrator.csproj
+++ b/app/src/Passingwind.WorkflowApp.DbMigrator/Passingwind.WorkflowApp.DbMigrator.csproj
@@ -4,7 +4,7 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net7.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
@@ -12,11 +12,11 @@
         <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
         <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
         <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
-        <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.*" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Volo.Abp.Autofac" Version="6.0.1" />
+        <PackageReference Include="Volo.Abp.Autofac" Version="7.0.2" />
         <ProjectReference Include="..\Passingwind.WorkflowApp.Application.Contracts\Passingwind.WorkflowApp.Application.Contracts.csproj" />
         <ProjectReference Include="..\Passingwind.WorkflowApp.EntityFrameworkCore\Passingwind.WorkflowApp.EntityFrameworkCore.csproj" />
     </ItemGroup>
