--- a/app/src/Passingwind.WorkflowApp.EntityFrameworkCore/Passingwind.WorkflowApp.EntityFrameworkCore.csproj
+++ b/app/src/Passingwind.WorkflowApp.EntityFrameworkCore/Passingwind.WorkflowApp.EntityFrameworkCore.csproj
@@ -3,25 +3,25 @@
     <Import Project="..\..\common.props" />
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net7.0</TargetFramework>
         <RootNamespace>Passingwind.WorkflowApp</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\..\..\src\Passingwind.Abp.ElsaModule.EntityFrameworkCore\Passingwind.Abp.ElsaModule.EntityFrameworkCore.csproj" />
         <ProjectReference Include="..\Passingwind.WorkflowApp.Domain\Passingwind.WorkflowApp.Domain.csproj" />
-        <PackageReference Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="6.0.1" />
-        <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" Version="6.0.1" />
-        <PackageReference Include="Volo.Abp.SettingManagement.EntityFrameworkCore" Version="6.0.1" />
-        <PackageReference Include="Volo.Abp.Identity.EntityFrameworkCore" Version="6.0.1" />
-        <PackageReference Include="Volo.Abp.BackgroundJobs.EntityFrameworkCore" Version="6.0.1" />
-        <PackageReference Include="Volo.Abp.AuditLogging.EntityFrameworkCore" Version="6.0.1" />
-        <PackageReference Include="Volo.Abp.TenantManagement.EntityFrameworkCore" Version="6.0.1" />
-        <PackageReference Include="Volo.Abp.FeatureManagement.EntityFrameworkCore" Version="6.0.1" />
+        <PackageReference Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.SettingManagement.EntityFrameworkCore" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.Identity.EntityFrameworkCore" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.BackgroundJobs.EntityFrameworkCore" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.AuditLogging.EntityFrameworkCore" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.TenantManagement.EntityFrameworkCore" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.FeatureManagement.EntityFrameworkCore" Version="7.0.2" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.5">
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.*">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
             <PrivateAssets>compile; contentFiles; build; buildMultitargeting; buildTransitive; analyzers; native</PrivateAssets>
         </PackageReference>
