--- a/app/src/Passingwind.WorkflowApp.Web/Passingwind.WorkflowApp.Web.csproj
+++ b/app/src/Passingwind.WorkflowApp.Web/Passingwind.WorkflowApp.Web.csproj
@@ -3,7 +3,7 @@
     <Import Project="..\..\common.props" />
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net7.0</TargetFramework>
         <RootNamespace>Passingwind.WorkflowApp.Web</RootNamespace>
         <AssetTargetFallback>$(AssetTargetFallback);portable-net45+win8+wp8+wpa81;</AssetTargetFallback>
         <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -15,35 +15,35 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="6.0.*" />
+        <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="7.0.3" />
         <PackageReference Include="Hangfire.Core" Version="1.7.29" />
         <PackageReference Include="Hangfire.MemoryStorage" Version="1.7.0" />
         <PackageReference Include="Hangfire.Redis.StackExchange" Version="1.8.5" />
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.*" />
-        <PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis" Version="6.0.*" />
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.*" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.3" />
+        <PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis" Version="7.0.3" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="7.0.3" />
         <PackageReference Include="DistributedLock.FileSystem" Version="1.0.1" />
         <PackageReference Include="DistributedLock.Redis" Version="1.0.2" />
-        <PackageReference Include="NLog.Web.AspNetCore" Version="5.2.0" />
-        <PackageReference Include="Owl.Abp.CultureMap" Version="2.2.0" />
+        <PackageReference Include="NLog.Web.AspNetCore" Version="5.2.2" />
+        <PackageReference Include="Owl.Abp.CultureMap" Version="7.0.0" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="6.0.1" />
+        <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="7.0.2" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Volo.Abp.Autofac" Version="6.0.1" />
-        <PackageReference Include="Volo.Abp.Caching.StackExchangeRedis" Version="6.0.1" />
-        <PackageReference Include="Volo.Abp.DistributedLocking" Version="6.0.1" /> 
-        <PackageReference Include="Volo.Abp.AspNetCore.Authentication.OpenIdConnect" Version="6.0.1" /> 
-        <PackageReference Include="Volo.Abp.Http.Client.IdentityModel.Web" Version="6.0.1" />
-        <PackageReference Include="Volo.Abp.Swashbuckle" Version="6.0.1" />
-        <PackageReference Include="Volo.Abp.Identity.Web" Version="6.0.1" /> 
-        <PackageReference Include="Volo.Abp.Account.Web" Version="6.0.1" /> 
-        <PackageReference Include="Volo.Abp.MailKit" Version="6.0.1" />
-        <PackageReference Include="Volo.Abp.BackgroundJobs.HangFire" Version="6.0.1" />
-        <PackageReference Include="Volo.Abp.BackgroundWorkers.Hangfire" Version="6.0.1" />
+        <PackageReference Include="Volo.Abp.Autofac" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.Caching.StackExchangeRedis" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.DistributedLocking" Version="7.0.2" /> 
+        <PackageReference Include="Volo.Abp.AspNetCore.Authentication.OpenIdConnect" Version="7.0.2" /> 
+        <PackageReference Include="Volo.Abp.Http.Client.IdentityModel.Web" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.Swashbuckle" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.Identity.Web" Version="7.0.2" /> 
+        <PackageReference Include="Volo.Abp.Account.Web" Version="7.0.2" /> 
+        <PackageReference Include="Volo.Abp.MailKit" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.BackgroundJobs.HangFire" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.BackgroundWorkers.Hangfire" Version="7.0.2" />
     </ItemGroup>
 
     <ItemGroup>
