--- a/src/Passingwind.Abp.ElsaModule.Application.Contracts/Passingwind.Abp.ElsaModule.Application.Contracts.csproj
+++ b/src/Passingwind.Abp.ElsaModule.Application.Contracts/Passingwind.Abp.ElsaModule.Application.Contracts.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <Import Project="..\..\common.props" />
 
@@ -9,8 +9,8 @@
 
     <ItemGroup>
         <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" /> 
-        <PackageReference Include="Volo.Abp.Ddd.Application.Contracts" Version="6.0.1" />
-        <PackageReference Include="Volo.Abp.Authorization" Version="6.0.1" />
+        <PackageReference Include="Volo.Abp.Ddd.Application.Contracts" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.Authorization" Version="7.0.2" />
         <ProjectReference Include="..\Passingwind.Abp.ElsaModule.Domain.Shared\Passingwind.Abp.ElsaModule.Domain.Shared.csproj" />
     </ItemGroup>
 
