--- a/src/Passingwind.Abp.ElsaModule.Application/Passingwind.Abp.ElsaModule.Application.csproj
+++ b/src/Passingwind.Abp.ElsaModule.Application/Passingwind.Abp.ElsaModule.Application.csproj
@@ -1,17 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <Import Project="..\..\common.props" />
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net7.0</TargetFramework>
         <RootNamespace>Passingwind.Abp.ElsaModule</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Volo.Abp.AutoMapper" Version="6.0.1" />
-        <PackageReference Include="Volo.Abp.Ddd.Application" Version="6.0.1" />
-        <PackageReference Include="Volo.Abp.Caching" Version="6.0.1" />
-        <PackageReference Include="Volo.Abp.Authorization.Abstractions" Version="6.0.1" />
+        <PackageReference Include="Volo.Abp.AutoMapper" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.Ddd.Application" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.Caching" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.Authorization.Abstractions" Version="7.0.2" />
     </ItemGroup>
 
     <ItemGroup>
