--- a/src/Passingwind.Abp.ElsaModule.Domain.Shared/Passingwind.Abp.ElsaModule.Domain.Shared.csproj
+++ b/src/Passingwind.Abp.ElsaModule.Domain.Shared/Passingwind.Abp.ElsaModule.Domain.Shared.csproj
@@ -10,9 +10,9 @@
 
     <ItemGroup>
         <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
-        <PackageReference Include="Volo.Abp.Validation" Version="6.0.1" />
-        <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-        <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="6.0.5" />
+        <PackageReference Include="Volo.Abp.Validation" Version="7.0.2" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+        <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="7.0.*" />
         <PackageReference Include="Elsa.Abstractions" Version="2.9.2" />
     </ItemGroup>
 
