--- a/src/Passingwind.Abp.ElsaModule.Domain/Passingwind.Abp.ElsaModule.Domain.csproj
+++ b/src/Passingwind.Abp.ElsaModule.Domain/Passingwind.Abp.ElsaModule.Domain.csproj
@@ -12,13 +12,15 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Volo.Abp.Ddd.Domain" Version="6.0.1" />
-        <PackageReference Include="Volo.Abp.Caching" Version="6.0.1" />
-        <PackageReference Include="Volo.Abp.DistributedLocking" Version="6.0.1" />        
+        <PackageReference Include="Volo.Abp.Ddd.Domain" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.Caching" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.DistributedLocking" Version="7.0.2" />        
     </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="Elsa" Version="2.9.2" />
+        <!--overwrite-->
+        <PackageReference Include="Rebus.ServiceProvider" Version="8.4.0" />
     </ItemGroup>
 
 </Project>
