--- a/src/Passingwind.Abp.ElsaModule.ElsaExtensions/Passingwind.Abp.ElsaModule.ElsaExtensions.csproj
+++ b/src/Passingwind.Abp.ElsaModule.ElsaExtensions/Passingwind.Abp.ElsaModule.ElsaExtensions.csproj
@@ -1,13 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
     <Import Project="..\..\common.props" />
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net7.0</TargetFramework>
         <RootNamespace>Passingwind.Abp.ElsaModule</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="6.0.*" />
+        <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="7.0.3" />
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.4.0" />
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Features" Version="4.4.0" />
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.4.0" />
@@ -44,9 +44,9 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Volo.Abp.EventBus" Version="6.0.1" />
-        <PackageReference Include="Volo.Abp.Emailing" Version="6.0.1" />
-        <PackageReference Include="Volo.Abp.AspNetCore.Mvc" Version="6.0.1" />
+        <PackageReference Include="Volo.Abp.EventBus" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.Emailing" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.AspNetCore.Mvc" Version="7.0.2" />
     </ItemGroup>
 
     <ItemGroup>
