--- a/src/Passingwind.Abp.ElsaModule.EntityFrameworkCore/Passingwind.Abp.ElsaModule.EntityFrameworkCore.csproj
+++ b/src/Passingwind.Abp.ElsaModule.EntityFrameworkCore/Passingwind.Abp.ElsaModule.EntityFrameworkCore.csproj
@@ -3,17 +3,18 @@
     <Import Project="..\..\common.props" />
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net7.0</TargetFramework>
         <RootNamespace>Passingwind.Abp.ElsaModule</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Volo.Abp.EntityFrameworkCore" Version="6.0.1" />
+        <PackageReference Include="Volo.Abp.EntityFrameworkCore" Version="7.0.2" />
         <ProjectReference Include="..\Passingwind.Abp.ElsaModule.Domain\Passingwind.Abp.ElsaModule.Domain.csproj" />
     </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="Elsa.Abstractions" Version="2.9.2" />
+        <PackageReference Include="NodaTime.Serialization.SystemTextJson" Version="1.0.0" />
     </ItemGroup>
 
 </Project>
