--- a/src/Passingwind.Abp.ElsaModule.HttpApi.Client/Passingwind.Abp.ElsaModule.HttpApi.Client.csproj
+++ b/src/Passingwind.Abp.ElsaModule.HttpApi.Client/Passingwind.Abp.ElsaModule.HttpApi.Client.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <Import Project="..\..\common.props" />
 
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Volo.Abp.Http.Client" Version="6.0.1" />
+        <PackageReference Include="Volo.Abp.Http.Client" Version="7.0.2" />
         <ProjectReference Include="..\Passingwind.Abp.ElsaModule.Application.Contracts\Passingwind.Abp.ElsaModule.Application.Contracts.csproj" />
     </ItemGroup>
 
