--- a/src/Passingwind.Abp.ElsaModule.HttpApi/Passingwind.Abp.ElsaModule.HttpApi.csproj
+++ b/src/Passingwind.Abp.ElsaModule.HttpApi/Passingwind.Abp.ElsaModule.HttpApi.csproj
@@ -1,14 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <RootNamespace>Passingwind.Abp.ElsaModule</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.AspNetCore.Mvc" Version="6.0.1" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Mvc" Version="7.0.2" />
     <ProjectReference Include="..\Passingwind.Abp.ElsaModule.Application.Contracts\Passingwind.Abp.ElsaModule.Application.Contracts.csproj" />
   </ItemGroup>
 
