--- a/src/Passingwind.Abp.ElsaModule.Installer/Passingwind.Abp.ElsaModule.Installer.csproj
+++ b/src/Passingwind.Abp.ElsaModule.Installer/Passingwind.Abp.ElsaModule.Installer.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <Import Project="..\..\common.props" />
 
@@ -10,8 +10,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Volo.Abp.Studio.ModuleInstaller" Version="5.3.1" />
-        <PackageReference Include="Volo.Abp.VirtualFileSystem" Version="5.3.1" />
+        <PackageReference Include="Volo.Abp.Studio.ModuleInstaller" Version="7.0.2" />
+        <PackageReference Include="Volo.Abp.VirtualFileSystem" Version="7.0.2" />
     </ItemGroup>
 
     <ItemGroup>
