--- a/src/Passingwind.Abp.ElsaModule.MongoDB/Passingwind.Abp.ElsaModule.MongoDB.csproj
+++ b/src/Passingwind.Abp.ElsaModule.MongoDB/Passingwind.Abp.ElsaModule.MongoDB.csproj
@@ -1,15 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <Import Project="..\..\common.props" />
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net7.0</TargetFramework>
         <RootNamespace>Passingwind.Abp.ElsaModule</RootNamespace>
         <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Volo.Abp.MongoDB" Version="6.0.1" />
+        <PackageReference Include="Volo.Abp.MongoDB" Version="7.0.2" />
         <ProjectReference Include="..\Passingwind.Abp.ElsaModule.Domain\Passingwind.Abp.ElsaModule.Domain.csproj" />
     </ItemGroup>
 
