--- a/test/Passingwind.Abp.ElsaModule.EntityFrameworkCore.Tests/Passingwind.Abp.ElsaModule.EntityFrameworkCore.Tests.csproj
+++ b/test/Passingwind.Abp.ElsaModule.EntityFrameworkCore.Tests/Passingwind.Abp.ElsaModule.EntityFrameworkCore.Tests.csproj
@@ -1,18 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <RootNamespace>Passingwind.Abp.ElsaModule</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="6.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="7.0.*" />
     <ProjectReference Include="..\..\src\Passingwind.Abp.ElsaModule.EntityFrameworkCore\Passingwind.Abp.ElsaModule.EntityFrameworkCore.csproj" />
     <ProjectReference Include="..\Passingwind.Abp.ElsaModule.TestBase\Passingwind.Abp.ElsaModule.TestBase.csproj" />
-    <PackageReference Include="Volo.Abp.EntityFrameworkCore.Sqlite" Version="6.0.1" />
+    <PackageReference Include="Volo.Abp.EntityFrameworkCore.Sqlite" Version="7.0.2" />
   </ItemGroup>
 
 </Project>
