--- a/test/Passingwind.Abp.ElsaModule.HttpApi.Client.ConsoleTestApp/Passingwind.Abp.ElsaModule.HttpApi.Client.ConsoleTestApp.csproj
+++ b/test/Passingwind.Abp.ElsaModule.HttpApi.Client.ConsoleTestApp/Passingwind.Abp.ElsaModule.HttpApi.Client.ConsoleTestApp.csproj
@@ -1,14 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <RootNamespace>Passingwind.Abp.ElsaModule</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Http.Client.IdentityModel" Version="6.0.1" />
-    <PackageReference Include="Volo.Abp.Autofac" Version="6.0.1" />
+    <PackageReference Include="Volo.Abp.Http.Client.IdentityModel" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.Autofac" Version="7.0.2" />
     <ProjectReference Include="..\..\src\Passingwind.Abp.ElsaModule.HttpApi.Client\Passingwind.Abp.ElsaModule.HttpApi.Client.csproj" />
   </ItemGroup>
 
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.*" />
   </ItemGroup>
 
 </Project>
